--- a/model_baseline.ipynb
+++ b/model_baseline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,12 +42,13 @@
     "from scipy import stats\n",
     "from pathlib import Path\n",
     "import zarr\n",
-    "import itertools as it"
+    "import itertools as it\n",
+    "import sys"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,19 +179,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Omar\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:7: RuntimeWarning: you're running with a custom agents_mask\n",
+      "  import sys\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "warning, you're running with a custom agents_mask\n",
-      "+------------+------------+------------+-----------------+----------------------+----------------------+----------------------+---------------------+\n",
-      "| Num Scenes | Num Frames | Num Agents | Total Time (hr) | Avg Frames per Scene | Avg Agents per Frame | Avg Scene Time (sec) | Avg Frame frequency |\n",
-      "+------------+------------+------------+-----------------+----------------------+----------------------+----------------------+---------------------+\n",
-      "|   11314    |  1131400   |  88594921  |      31.43      |        100.00        |        78.31         |        10.00         |        10.00        |\n",
-      "+------------+------------+------------+-----------------+----------------------+----------------------+----------------------+---------------------+\n"
+      "+------------+------------+------------+---------------+-----------------+----------------------+----------------------+----------------------+---------------------+\n",
+      "| Num Scenes | Num Frames | Num Agents | Num TR lights | Total Time (hr) | Avg Frames per Scene | Avg Agents per Frame | Avg Scene Time (sec) | Avg Frame frequency |\n",
+      "+------------+------------+------------+---------------+-----------------+----------------------+----------------------+----------------------+---------------------+\n",
+      "|   11314    |  1131400   |  88594921  |    7854144    |      31.43      |        100.00        |        78.31         |        10.00         |        10.00        |\n",
+      "+------------+------------+------------+---------------+-----------------+----------------------+----------------------+----------------------+---------------------+\n"
      ]
     }
    ],
@@ -211,14 +219,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5927/5927 [1:10:51<00:00,  1.39it/s]\n"
+      "  0%|          | 0/5927 [00:00<?, ?it/s]C:\\Users\\Omar\\Anaconda3\\lib\\site-packages\\l5kit\\dataset\\agent.py:115: RuntimeWarning: disable_traffic_light_faces not found in config, this will raise an error in the future\n",
+      "  return self.get_frame(scene_index, state_index, track_id=track_id)\n",
+      " 28%|██▊       | 1665/5927 [51:00<7:29:58,  6.33s/it] "
      ]
     }
    ],
@@ -287,7 +297,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
